<?xml version="1.0"?>
<package format="2">
  <name>adma_connect</name>
  <version>0.1.0</version>
  <description>The adma_connect package</description>
  <maintainer email="lakshman.balasubramanian@carissma.eu">Lakshman Balasubramanian</maintainer>
  <license>Apache 2.0</license>
   <build_depend>message_generation</build_depend>
  <build_export_depend>message_generation</build_export_depend>
  <exec_depend>message_runtime</exec_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>boost</build_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>boost</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>boost</exec_depend>
  <exec_depend>roscpp</exec_depend>

  <build_depend>std_msgs</build_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>std_msgs</exec_depend>
</package>
